[feedback-ui-fixes] sticker svg alignment problem fixed.

--- a/plugins/star-rating/frontend/public/stylesheets/main.css
+++ b/plugins/star-rating/frontend/public/stylesheets/main.css
@@ -99,15 +99,15 @@
 }
 
 .mleft-s > #feedback-sticker-svg, .mright-s > #feedback-sticker-svg, .bright-s > #feedback-sticker-svg, .bleft-s > #feedback-sticker-svg {
-    height: 14px;
+    height: 13px;
     width: 14px;
 }
 .mleft-m > #feedback-sticker-svg, .mright-m > #feedback-sticker-svg, .bright-m > #feedback-sticker-svg, .bleft-m > #feedback-sticker-svg {
-    height: 18px;
+    height: 15px;
     width: 18px;
 }
 .mleft-l > #feedback-sticker-svg, .mright-l > #feedback-sticker-svg, .bright-l > #feedback-sticker-svg, .bleft-l > #feedback-sticker-svg {
-    height: 20px;
+    height: 18px;
     width: 20px;
 }
 
@@ -2540,4 +2540,4 @@ _::-webkit-full-page-media, _:future, :root .mright-s, .mright-m, .mright-l {
 }
 .routename-star .widget-header .title.small + #drill-down-for-view {
     margin-top: 0px !important;
-} 
+}
